--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="side_margin">16dp</dimen>
+    <dimen name="margin_between_elements">4dp</dimen>
 </resources>
