--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="side_margin">16dp</dimen>
     <dimen name="margin_between_elements">4dp</dimen>
+
+    <dimen name="button_size_medium">225dp</dimen>
+
+    <dimen name ="header_text">20sp</dimen>
 </resources>
