--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,5 +24,17 @@
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
+        <action
+            android:id="@+id/action_SecondFragment_to_programTypeFragment"
+            app:destination="@id/programTypeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/programTypeFragment"
+        android:name="com.example.exercisetracker.ProgramTypeFragment"
+        android:label="fragment_program_type"
+        tools:layout="@layout/fragment_program_type" >
+        <action
+            android:id="@+id/action_programTypeFragment_to_SecondFragment"
+            app:destination="@id/SecondFragment" />
     </fragment>
 </navigation>
