--- a/app/src/main/res/layout/program_type_item.xml
+++ b/app/src/main/res/layout/program_type_item.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="program"
+            type="com.example.exercisetracker.db.ProgramType"/>
+    </data>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/program_type_item"
@@ -39,4 +43,4 @@
             tools:text="(Henter fra db) Styrketrening med manualer"/>
 
     </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
