Temp logout button in 2nd.fragment

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -109,7 +109,7 @@
         android:layout_marginEnd="@dimen/side_margin"
         android:layout_marginTop="@dimen/margin_between_elements"
         android:layout_marginBottom="@dimen/margin_between_elements"
-        android:hint="Fødselsdag"
+        android:hint="@string/birth_year"
         app:startIconDrawable="@drawable/cake_img"
         app:errorEnabled="true"
         app:counterEnabled="true"
@@ -133,7 +133,7 @@
         android:layout_marginEnd="@dimen/side_margin"
         android:layout_marginTop="@dimen/margin_between_elements"
         android:layout_marginBottom="@dimen/margin_between_elements"
-        android:hint="Epost"
+        android:hint="@string/email"
         app:startIconDrawable="@drawable/email_img"
         app:errorEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
