fragment.xml and class for program detail from where user can add exercises or create new ones

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="margin_between_elements">4dp</dimen>
 
     <dimen name="button_size_medium">225dp</dimen>
+    <dimen name="button_size_small">50dp</dimen>
 
     <dimen name ="header_text">20sp</dimen>
 </resources>
