--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -48,5 +48,16 @@
         <action
             android:id="@+id/action_newProgramFragment_to_programTypeFragment"
             app:destination="@id/programTypeFragment" />
+        <action
+            android:id="@+id/action_newProgramFragment_to_programDetailsFragment"
+            app:destination="@id/programDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/programDetailsFragment"
+        android:name="com.example.exercisetracker.ProgramDetailsFragment"
+        android:label="ProgramDetailsFragment" >
+        <action
+            android:id="@+id/action_programDetailsFragment_to_newProgramFragment"
+            app:destination="@id/newProgramFragment" />
     </fragment>
 </navigation>
