--- a/app/src/main/res/layout/program_type_item.xml
+++ b/app/src/main/res/layout/program_type_item.xml
@@ -5,6 +5,9 @@
 
     <data>
         <variable
+            name="viewModel"
+            type="com.example.exercisetracker.viewmodel.SharedViewModel" />
+        <variable
             name="program"
             type="com.example.exercisetracker.db.ProgramType"/>
     </data>
@@ -38,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/side_margin"
+            android:text="@{program.description}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="(Henter fra db) Styrketrening med manualer"/>
