--- a/app/src/main/res/layout/fragment_new_program.xml
+++ b/app/src/main/res/layout/fragment_new_program.xml
@@ -10,7 +10,7 @@
             type="com.example.exercisetracker.viewmodel.SharedViewModel"/>
         <variable
             name="programtype"
-            type="com.example.exercisetracker.db.ProgramType"/>
+            type="com.example.exercisetracker.network.AppProgramTypesJSON"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
