--- a/app/src/main/res/layout/program_type_item.xml
+++ b/app/src/main/res/layout/program_type_item.xml
@@ -9,7 +9,7 @@
             type="com.example.exercisetracker.viewmodel.SharedViewModel" />
         <variable
             name="program"
-            type="com.example.exercisetracker.db.ProgramType"/>
+            type="com.example.exercisetracker.network.AppProgramTypesJSON"/>
     </data>
 
     <androidx.cardview.widget.CardView
