WIP. Data management remote api to local db storage, and local db to viewModel/UI with Flow. Error handling when no internet conenction / bad API response.

--- a/app/src/main/res/layout/fragment_new_program.xml
+++ b/app/src/main/res/layout/fragment_new_program.xml
@@ -10,7 +10,7 @@
             type="com.example.exercisetracker.viewmodel.SharedViewModel"/>
         <variable
             name="programtype"
-            type="com.example.exercisetracker.network.AppProgramTypesJSON"/>
+            type="com.example.exercisetracker.network.AppProgramTypeJSON"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
