Change appProgramType to programType object

--- a/app/src/main/res/layout/fragment_program_type.xml
+++ b/app/src/main/res/layout/fragment_program_type.xml
@@ -32,6 +32,7 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toTopOf="@id/button_back"
                 app:layout_constraintStart_toStartOf="parent"
+                app:listData="@{viewModel.programTypes}"
                 tools:itemCount="15"
                 tools:listItem="@layout/program_type_item" />
         </ScrollView>
