--- a/app/src/main/res/layout/fragment_new_exercise.xml
+++ b/app/src/main/res/layout/fragment_new_exercise.xml
@@ -31,7 +31,7 @@
             android:id="@+id/button_exercise_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ta nytt bilde"
+            android:text="@string/take_new_picture"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/imageview_exercise"/>
 
