--- a/app/src/main/res/layout/fragment_my_exercises.xml
+++ b/app/src/main/res/layout/fragment_my_exercises.xml
@@ -1,66 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MyExerciseFragment">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/side_margin"
+    tools:context=".MyExercisesFragment">
 
-    <data>
-        <variable
-            name="viewModel"
-            type="com.example.exercisetracker.viewmodel.SharedViewModel" />
+    <TextView
+        android:id="@+id/tv_my_exercises"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/header_text"
+        android:text="Mine øvelser"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    </data>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/exercise_recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:padding="8dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@id/bt_new_exercise"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_my_exercises"
+        tools:itemCount="10" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <Button
+        android:id="@+id/bt_new_exercise"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/side_margin">
+        android:layout_height="wrap_content"
+        android:text="@string/create_new_exercise"
+        android:layout_marginBottom="@dimen/margin_between_elements"
+        app:layout_constraintBottom_toTopOf="@id/bt_my_programs"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-            android:id="@+id/tv_my_exercises"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/header_text"
-            android:text="Mine øvelser"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <Button
+        android:id="@+id/bt_my_programs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/my_programs"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/exercise_recycler"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:clipToPadding="false"
-            android:padding="8dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/bt_new_exercise"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_my_exercises"
-            app:listData="@{viewModel.userExercises}"
-            tools:itemCount="10"
-            tools:listItem="@layout/exercise_item" />
-
-        <Button
-            android:id="@+id/bt_new_exercise"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/create_new_exercise"
-            android:layout_marginBottom="@dimen/margin_between_elements"
-            app:layout_constraintBottom_toTopOf="@id/bt_my_programs"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <Button
-            android:id="@+id/bt_my_programs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/my_programs"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
