--- a/app/src/main/res/layout/fragment_new_program.xml
+++ b/app/src/main/res/layout/fragment_new_program.xml
@@ -146,6 +146,17 @@
             app:layout_constraintStart_toEndOf="@id/button_save_program"
             />
 
+        <Button
+            android:id="@+id/button_my_exercises"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Exercises"
+            android:layout_marginTop="@dimen/side_margin"
+            app:layout_constraintTop_toBottomOf="@id/button_save_program"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
