--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,7 +12,7 @@
         android:title="@string/nav_my_exercises" />
     <item
         android:id="@+id/action_my_programs"
-        android:title="@string/nav_my_programs" />
+        android:title="@string/my_programs" />
     <item
         android:id="@+id/nav_logout"
         android:title="@string/nav_logout" />
