--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -101,7 +101,11 @@
             android:id="@+id/action_newExerciseFragment_to_programDetailsFragment"
             app:destination="@id/programDetailsFragment"
             app:popUpTo="@id/programDetailsFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true">
+            <argument
+                android:name="userId"
+                app:argType="integer" />
+        </action>
         <action
             android:id="@+id/action_newExerciseFragment_to_myExercisesFragment"
             app:destination="@id/myExercisesFragment" />
