--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -15,8 +15,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/side_margin">
+        android:layout_height="wrap_content">
 
         <View
             android:id="@+id/divider_top"
@@ -61,25 +60,21 @@
             app:layout_constraintEnd_toStartOf="@id/button_add"
             tools:text="Exercise-beskrivelse bla bla bla bla bla"/>
 
-        <!-- Add-button visible for recycler view in ProgramDetailsFragment-->
         <ImageButton
             android:id="@+id/button_add"
             android:layout_width="@dimen/button_size_small"
             android:layout_height="wrap_content"
             android:src="@drawable/add_img"
-            android:textSize="@dimen/header_text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider_top"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/divider_top"/>
 
-        <!-- Edit-button visible for recyclerView in MyExercisesFragment-->
         <ImageButton
             android:id="@+id/button_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/edit_img"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider_top"
+            app:layout_constraintTop_toBottomOf="@id/button_add"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
