--- a/app/src/main/res/layout/fragment_program_details.xml
+++ b/app/src/main/res/layout/fragment_program_details.xml
@@ -2,7 +2,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ProgramDetailsFragment">
 
     <data>
         <variable
@@ -10,13 +11,18 @@
             type="com.example.exercisetracker.viewmodel.SharedViewModel"/>
         <variable
             name="program"
-            type="com.example.exercisetracker.db.Program"/>
+            type="com.example.exercisetracker.db.Program" />
+        <variable
+            name="programType"
+            type="com.example.exercisetracker.db.AppProgramType" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ProgramDetailsFragment">
+        android:layout_marginStart="@dimen/side_margin"
+        android:layout_marginEnd="@dimen/side_margin"
+        android:layout_marginTop="@dimen/side_margin">
 
         <!-- Image view skal  hente icon fra viewModel.userProgram.icon, eller hva det blir hetende der-->
         <!--android:src="@{viewModel.userProgram.icon}"-->
@@ -24,7 +30,6 @@
             android:id="@+id/program_type_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/side_margin"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -34,19 +39,20 @@
             android:id="@+id/tv_add_programs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_exercises"
-            android:layout_margin="@dimen/side_margin"
+            android:text="@{program.name}"
+            android:layout_marginTop="@dimen/side_margin"
             android:textSize="@dimen/header_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/program_type_image"/>
+            app:layout_constraintTop_toBottomOf="@id/program_type_image"
+            tools:text="Program-navn"/>
 
         <View
             android:id="@+id/divider_top"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_margin="@dimen/side_margin"
             android:background="?attr/dividerHorizontal"
+            android:layout_marginBottom="@dimen/margin_between_elements"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_add_programs"/>
@@ -56,38 +62,33 @@
             android:id="@+id/program_type_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/side_margin"
-
+            android:text="@{programType.description}"
+            android:layout_marginTop="@dimen/margin_between_elements"
             app:layout_constraintStart_toStartOf="@id/divider_top"
             app:layout_constraintTop_toBottomOf="@id/divider_top"
             tools:text="ProgramType-navn"/>
 
-        <!--android:text="@{viewModel.userProgram.name}"-->
         <TextView
-            android:id="@+id/user_program_name"
+            android:id="@+id/tv_program_exercises"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/side_margin"
-            android:layout_marginTop="@dimen/margin_between_elements"
-
+            android:text="@string/program_exercises"
             app:layout_constraintStart_toStartOf="@id/divider_top"
-            app:layout_constraintTop_toBottomOf="@id/program_type_name"
-            tools:text="UserProgram-navn"/>
+            app:layout_constraintTop_toBottomOf="@id/program_type_name"/>
 
-        <!-- Denne recycler view viser kun text med navn på øvelse som er lagt til. Bør oppdateres underveismed en observer?-->
+        <!-- Denne recycler view viser kun text med navn på øvelse som er lagt til. Må oppdateres underveis når øvelser legges til-->
         <ScrollView
             android:id="@+id/scrollview_upper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/side_margin"
-            android:layout_marginEnd="@dimen/side_margin"
+            android:layout_marginTop="@dimen/side_margin"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/user_program_name">
+            app:layout_constraintTop_toBottomOf="@id/tv_program_exercises">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/exercise_name_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:padding="6dp"
                 android:clipToPadding="false"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -111,9 +112,9 @@
             android:id="@+id/no_exercise_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:visibility="invisible"
             android:text="@string/no_registered_exercises"
-            android:layout_margin="@dimen/side_margin"
+            android:layout_marginTop="@dimen/side_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divider_bottom"
             />
@@ -121,31 +122,21 @@
 
         <!--Denne recycler viser liste over øvelser, med ikon, navn og legg-til knapp-->
         <!--Før bruker har lagret øvelser er den invisible-->
-        <ScrollView
-            android:id="@+id/scrollview_bottom"
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/exercise_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/side_margin"
-            android:layout_marginTop="@dimen/side_margin"
-            android:layout_marginEnd="@dimen/side_margin"
+            android:visibility="invisible"
+            android:padding="6dp"
+            android:clipToPadding="false"
+            android:scrollbars="vertical"
+            android:layout_marginTop="@dimen/margin_between_elements"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider_bottom">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/exercise_recycler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="invisible"
-                android:padding="6dp"
-                android:clipToPadding="false"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:itemCount="6"
-                tools:listItem="@layout/exercise_item"/>
-
-        </ScrollView>
-
-
+            app:layout_constraintTop_toBottomOf="@id/divider_bottom"
+            tools:itemCount="6"
+            tools:listItem="@layout/exercise_item"/>
 
 
         <Button
