New StatisticsAdapter and Statistics fragmentclass to show data for user sessions on first page after login. Fixed navgraph accordingly. Added destination to topbarMenu

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,9 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
+        android:id="@+id/nav_my_statistics"
+        android:title="@string/nav_my_sessions" />
+    <item
         android:id="@+id/nav_my_exercises"
         android:title="@string/nav_my_exercises" />
     <item
