--- a/app/src/main/res/layout/statistics_item.xml
+++ b/app/src/main/res/layout/statistics_item.xml
@@ -9,10 +9,7 @@
             name="viewModel"
             type="com.example.exercisetracker.viewmodel.SharedViewModel"/>
         <variable
-            name="exercise"
-            type="com.example.exercisetracker.db.UserProgramSessionData"/>
-        <variable
-            name="exercise"
+            name="userProgramSessionData"
             type="com.example.exercisetracker.db.UserProgramSessionData"/>
     </data>
 
