StatisticsFragment can now fetch user_program_session_data via sharedViewModel. added and edited related functions in repository, resources and API to fetch and insert session_data

--- a/app/src/main/res/layout/fragment_my_statistics.xml
+++ b/app/src/main/res/layout/fragment_my_statistics.xml
@@ -19,15 +19,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <TextView
+        android:id="@+id/tv_no_sessions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/you_have_no_sessions"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bt_register_new"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/bt_register_new"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/registrer_new_program"
+        android:layout_marginBottom="@dimen/margin_between_elements"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/session_data_header"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/statistics_recycler"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/session_data_header"
+        app:layout_constraintTop_toBottomOf="@id/bt_register_new"
         tools:listitem="@layout/statistics_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
