Fixed "edit", and "add" buttons in the exerciseItems to be clickable in app. They have no functionality yet

--- a/app/src/main/res/layout/fragment_new_exercise.xml
+++ b/app/src/main/res/layout/fragment_new_exercise.xml
@@ -116,7 +116,7 @@
             android:layout_height="wrap_content"
             android:text="Lagre Øvelse"
             android:layout_marginBottom="@dimen/side_margin"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/exercise_descript"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/button_back"
             />
@@ -127,7 +127,20 @@
             android:layout_height="wrap_content"
             android:text="@string/button_back"
             android:layout_marginBottom="@dimen/side_margin"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/exercise_descript"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/button_save_exercise"
+            />
+
+        <!-- Delete button is set to visible when navigating from "edit-exercise" option in-->
+        <Button
+            android:id="@+id/button_delete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Slett Øvelse"
+            android:layout_marginBottom="@dimen/side_margin"
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@id/button_back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/button_save_exercise"
             />
